# HomeLab

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
docs/: homelab.md  index.md  supabase.md
docs/homelab/: arch-linux.md  file-sharing.md  index.md  networking.md  performance.md  proxmox.md  troubleshooting.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/supabase/: access-control.md  backup.md  docker-setup.md  index.md  installation.md  monitoring.md  twingate.md
homelab/: index.html
homelab/arch-linux/: index.html
homelab/file-sharing/: index.html
homelab/networking/: index.html
homelab/performance/: index.html
homelab/proxmox/: index.html
homelab/troubleshooting/: index.html
overrides/: main.html
search/: search_index.json
stylesheets/: extra-timeline.css
supabase/: index.html
supabase/access-control/: index.html
supabase/backup/: index.html
supabase/docker-setup/: index.html
supabase/installation/: index.html
supabase/monitoring/: index.html
supabase/twingate/: index.html
